--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<title>my_irc</title>
 	<link rel="stylesheet" type="text/css" href="/lib/css-generics/import.css">
 	<script src="/socket.io/socket.io.js"></script>
-	<script type="module" src="./src/index.js"></script>
+	<script type="module" src="./src/app.js"></script>
 </head>
 <body></body>
 </html>
