--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>my_irc</title>
+	<title>domodel-socket-chat</title>
 	<link rel="stylesheet" type="text/css" href="/lib/css-generics/import.css">
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="module" src="./src/app.js"></script>
