moving out server

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>domodel-socket-chat</title>
-	<link rel="stylesheet" type="text/css" href="/lib/css-generics/import.css">
-	<script src="/socket.io/socket.io.js"></script>
+	<link rel="stylesheet" type="text/css" href="./lib/css-generics/import.css">
 	<script type="module" src="./src/index.js"></script>
 </head>
-<body></body>
+<body>
+	<noscript>
+		This feature requires JavaScript to be enabled.
+	</noscript>
+</body>
 </html>
