added socket io and browser sync

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>domodel-socket-chat</title>
 	<link rel="stylesheet" type="text/css" href="./lib/css-generics/import.css">
+	<script src="./lib/socket.io.js"></script>
 	<script type="module" src="./src/index.js"></script>
 </head>
 <body>
